@startuml Forgot and Reset Password
skinparam classAttributeIconSize 0

class AuthController {
    +ForgotPassword(command: ForgotPasswordCommand): Task<IActionResult>
    +ResetPassword(command: ResetPasswordCommand): Task<IActionResult>
}

class IdentityService {
    +ForgotPassword(request: ForgotPasswordRequest): Task<ErrorOr<Success>>
    +ResetPassword(request: ResetPasswordRequest): Task<ErrorOr<Success>>
}

class PasswordResetTokenEntity {
    +Id: Guid
    +UserId: Guid
    +Token: string
    +Expiry: DateTimeOffset
}

class MailEntity {
    +To: string
    +Subject: string
    +Body: string
}

AuthController ..> IdentityService : calls
IdentityService ..> PasswordResetTokenEntity : creates/validates
IdentityService ..> MailEntity : creates
@enduml
